This is version 2

--- a/delta-demo/index.html
+++ b/delta-demo/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>This is version 1</h1>
     <p>I am going to push the repo from my local machine (vs code) to our GitHub.</p>
-    <h1>This is version 2</h1>
+    <h1>This is version 2.</h1>
 </body>
 </html>
