--- a/delta-demo/index.html
+++ b/delta-demo/index.html
@@ -9,5 +9,6 @@
     <h1>This is version 1</h1>
     <p>I am going to push the repo from my local machine (vs code) to our GitHub.</p>
     <h1>This is version 2.</h1>
+    <h2>This is version 3.</h2>
 </body>
 </html>
