--- a/delta-demo/index.html
+++ b/delta-demo/index.html
@@ -10,5 +10,6 @@
     <p>I am going to push the repo from my local machine (vs code) to our GitHub.</p>
     <h1>This is version 2.</h1>
     <h2>This is version 3.</h2>
+    <p>It was very tough for me in the beginning to learn GitHub but slowly-slowly i grab it.</p>
 </body>
 </html>
