This is version 4

--- a/delta-demo/index.html
+++ b/delta-demo/index.html
@@ -11,5 +11,6 @@
     <h1>This is version 2.</h1>
     <h2>This is version 3.</h2>
     <p>It was very tough for me in the beginning to learn GitHub but slowly-slowly i grab it.</p>
+    <h2>This is version 4.</h2>
 </body>
 </html>
