Design added for Landing Page

--- a/Project1/Landing_Page.html
+++ b/Project1/Landing_Page.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>GitHub Branchig</title>
   <link rel="stylesheet" href="Landing_Page.css">
 </head>
 
@@ -15,10 +15,12 @@
     consequuntur vitae possimus voluptates architecto iure consequatur voluptate rem corporis, magni facere fugiat
     neque.
   </p>
+
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo id sint dolores quam odio, nesciunt, nostrum
     consequuntur vitae possimus voluptates architecto iure consequatur voluptate rem corporis, magni facere fugiat
     neque.
   </p>
+  
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo id sint dolores quam odio, nesciunt, nostrum
     consequuntur vitae possimus voluptates architecto iure consequatur voluptate rem corporis, magni facere fugiat
     neque.
