--- a/Project1/Landing_Page.html
+++ b/Project1/Landing_Page.html
@@ -25,6 +25,9 @@
     consequuntur vitae possimus voluptates architecto iure consequatur voluptate rem corporis, magni facere fugiat
     neque.
   </p>
+  <p>
+    End of the repo.
+  </p>
 </body>
 
 </html>
